--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^5.3.0",
     "@capacitor/cli": "^5.3.0",
     "@capacitor/core": "^5.3.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.2",
     "swiper": "^10.2.0",
     "typescript": "5.2.2"
   },
