--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "eslint-config-next": "13.4.19",
     "fontello-cli": "^0.6.2",
     "next": "13.4.19",
+    "quill-image-resize": "^3.0.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "swiper": "^10.2.0",
     "typescript": "5.2.2"
